--- a/lang/en.json
+++ b/lang/en.json
@@ -1,6 +1,10 @@
 {
   "scu.prepareTitle": "Prepare Spells",
   "scu.prepareDescription": "Some description",
+  "scu.preparedAdd": "Prepare this spell",
+  "scu.preparedSub": "Remove from prepared list",
+  "scu.clearPreparation": "Clear preparation",
+  "scu.applyChanges": "Apply changes",
   
   
   "scu.errorNoActor": "You are not owner of any actor. Please contact your GM about this.",
