Spellcaster initial release

--- a/lang/en.json
+++ b/lang/en.json
@@ -1,11 +1,14 @@
 {
   "scu.prepareTitle": "Prepare Spells",
-  "scu.prepareDescription": "Some description",
+  "scu.prepareDescription": "Use actions to prepare spells. Alternatively, you can left/right click on the spell name.",
   "scu.preparedAdd": "Prepare this spell",
   "scu.preparedSub": "Remove from prepared list",
   "scu.clearPreparation": "Clear preparation",
   "scu.applyChanges": "Apply changes",
-  
+  "scu.actions": "Actions",
+
+  "scu.castTitle": "Cast Spell",
+  "scu.castDescription": "Use action to cast a spell. Alternatively, you can click on the spell name.",  
   
   "scu.errorNoActor": "You are not owner of any actor. Please contact your GM about this.",
   "scu.errorMultipleActors": "You own more than one actor. Please choose an actor on the scene.",
